--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Roboto';
-    src: url('fonts/DMSans.ttf');
+    src: url('fonts/RobotoFlex-Regular.ttf');
 }
 
 * {
